--- a/linkedService/AppRegistrationRestService.json
+++ b/linkedService/AppRegistrationRestService.json
@@ -1,10 +1,15 @@
 {
 	"name": "AppRegistrationRestService",
 	"properties": {
+		"parameters": {
+			"AppRegistrationUrl": {
+				"type": "string"
+			}
+		},
 		"annotations": [],
 		"type": "RestService",
 		"typeProperties": {
-			"url": "https://login.microsoftonline.com",
+			"url": "@{linkedService().AppRegistrationUrl}",
 			"enableServerCertificateValidation": true,
 			"authenticationType": "OAuth2ClientCredential",
 			"clientId": "f61df473-ed3a-40fa-b718-e6e9b9cff679",
